# dify-obd

./: .gitignore  CLAUDE.md  README.md  config.ini.example  create_sample_excel.py  debug_local_dify.py  diagnose_api.py  dify_workflow_batch_processor.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test_api_debug.py  test_workflow_id.py  test_xinference_rerank.py
spec/: README.md  api.md  architecture.md  comparator.md  examples.md  models.md  processor.md  quickstart.md  setup.md
src/obd/: __init__.py  main.py  models.py
src/obd/client/: __init__.py  dify_client.py
src/obd/comparator/: __init__.py  answer_comparator.py
src/obd/processor/: __init__.py  batch_processor.py
tests/: __init__.py  conftest.py  test_answer_comparator.py  test_batch_processor.py  test_dify_client.py  test_models.py
